# generalized_niederreiter_sequence

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  make_file_list.sh
GF/: #GF.c#  GF.h  GFX.c  GF_gc2_niederriter.c  GF_gc_niederriter.c  GF_gen_irred_poly.c  GF_matrix_gen.c  GF_table_generator.c  LDS_Gauss_GF.c  makefile
GF16/: GF16.c  GF16.h  GF16X.c  GF16_gc2_niederriter.c  GF16_gc_niederriter.c  GF16_gen_irred_poly.c  GF16_matrix.c  GF16_matrix_gen.c  GF16_niederriter.c  GF16_scramble.c  GF16_table  GF16_table_generator.c  IP16  LDS_GF16.c  LDS_Gauss_GF16.c  example.c  makefile  n_lds_GF16.h
GF4/: GF4.c  GF4.h  GF4X.c  GF4_gc2_niederriter.c  GF4_gc_niederriter.c  GF4_gen_irred_poly.c  GF4_matrix.c  GF4_matrix_gen.c  GF4_niederriter.c  GF4_scramble.c  GF4_table  GF4_table_generator.c  LDS_GF4.c  LDS_Gauss_GF4.c  example.c  makefile  n_lds_GF4.h
benchmarks/: CMakeLists.txt  benchmark_galois_field_operator.cc  benchmark_sequence_sobol.cc  galois_field_operator.cc  galois_field_operator.h  irreducible_polynomial.cc  irreducible_polynomial.h  sequence_sobol.cc  sequence_sobol.h
ci/: build_cmake.sh  travis_cmake_setup.sh  valgrind_suppression.supp
cmake/: gf.cmake  gf_test.cmake  gns.cmake  gns_test.cmake
docker/docker_profile/: Dockerfile  README.md  docker_build.sh  docker_run_gprof.sh  gprof.sh
docker/docker_valgrind/: Dockerfile  README.md  docker_build.sh  docker_run.sh
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt  example_irreducible_polynomial.cc  example_irreducible_polynomials.cc  example_sequence_sobol.cc  example_simple_two_dim.cc
gf/: GF.c  GF_matrix.c  GF_niederriter.c  GF_table  GaussDevBM.c  IP4  IrreduciblePolynomial.cc  IrreduciblePolynomial.h  IrreduciblePolynomialTest.cc  LDS_GF.c  Polynomial.cc  Polynomial.h  PolynomialTest.cc  example.c  fwd.h  galois_field_operator.h  galois_field_operator_test.cc  gtest_helper_macro.h  irreducible_polynomial.txt  n_lds_GF.h  util.h  util_test.cc
gf/scripts/: irreducible_polynomial.py  irreducible_polynomial.txt
gns/: fwd.h  galois_field.h  galois_field_operator.h  galois_field_operator_test.cc  galois_field_test.cc  irreducible_polynomial.cc  irreducible_polynomial.h  irreducible_polynomial_gf16.txt  irreducible_polynomial_gf2.txt  irreducible_polynomial_gf4.txt  irreducible_polynomial_test.cc  laurent_series.h  laurent_series_test.cc  matrix.h  matrix_func.cc  matrix_func.h  matrix_func_test.cc  matrix_operator.h  matrix_operator_test.cc  matrix_test.cc  polynomial.h  polynomial_test.cc  sequence_simple_sobol.cc  sequence_simple_sobol.h  sequence_simple_sobol_test.cc  sequence_sobol.h  sequence_sobol_test.cc  util.h  util_test.cc  vector.h  vector_test.cc
gns/parameters/: joe_kuo_d6_21201_initial_number.h  joe_kuo_d6_21201_irreducible.h
gns/test_util/: gtest_assertion.h  gtest_helper_macro.h  random_number.cc  random_number.h  test_data.cc  test_data.h
scripts/: docker_run_generate_docs.sh  docker_run_generate_doxyfile.sh  docker_run_sphinx_quick_start.sh  formatter.sh  travis_cmake_setup.sh
